@@ -33,6 +33,11 @@ Beta 6
 
      - Failure to treat the interface as optional or required.
 
+4)  Where two ISPs share the same interface, if one of the ISPs was not
+    reachable, an iptables-restore error such as this occurred:
+
+      iptables-restore v1.4.10: Bad mac address "-j"
+
 Beta 5
 
 1)  Previously, proxy ARP with logical interface names did not
